--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="progress_bar_name_label">Stream name:</string>
     <string name="channel_name_label">Channel name:</string>
     <string name="user_name_label">User name:</string>
-    <string name="streams_display_label">Stream info:</string>
+    <string name="streams_display_label">Streams:</string>
+    <string name="stream_info_display_label">Stream Info:</string>
 </resources>
