--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="progress_bar_name_label">Stream name:</string>
     <string name="channel_name_label">Channel name:</string>
     <string name="user_name_label">User name:</string>
+    <string name="session_id_label">Session id:</string>
     <string name="producer_sampling_rate_label">[P] Sampling rate:</string>
     <string name="producer_frames_per_segment_label">[P] Frames per segment:</string>
     <string name="consumer_jitter_buffer_size_label">[C] Jitter buffer size:</string>
